--- a/MakeFile
+++ b/MakeFile
@@ -1,2 +1,16 @@
 run:
 	uvicorn main:app --host 192.168.100.149 --port 8000
+
+extract:
+	pybabel extract --input-dirs=. -o locales/messages.pot
+
+init:
+	pybabel init -i locales/messages.pot -d locales -D messages -l uz
+	pybabel init -i locales/messages.pot -d locales -D messages -l rus
+
+compile:
+	pybabel compile -d locales -D messages
+
+
+update:
+	pybabel update -d locales -D messages -i locales/messages.pot
