--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,27 @@ aiofiles==23.2.1
 aiogram==3.13.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
+aioredis==2.0.1
 aiosignal==1.3.1
+aiosqlite==0.17.0
 annotated-types==0.7.0
 anyio==4.4.0
+APScheduler==3.10.4
+async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==24.2.0
+babel==2.16.0
 bcrypt==4.2.0
 certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
+environs==11.0.0
 fastapi==0.114.0
+fastapi-admin==1.0.4
 fastapi-cli==0.0.5
+fastapi_cors==0.0.6
 frozenlist==1.4.1
 greenlet==3.1.0
 h11==0.14.0
@@ -21,32 +30,46 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.2
 idna==3.8
+iso8601==1.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 load-dotenv==0.1.0
 magic-filter==1.0.12
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 mdurl==0.1.2
 multidict==6.1.0
 orjson==3.10.7
+packaging==24.1
+pendulum==3.0.0
 psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.5.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pypika-tortoise==0.1.6
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.2
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.8.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
+time-machine==2.15.0
+tortoise-orm==0.21.6
 typer==0.12.5
 typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
 ujson==5.10.0
+urllib3==2.2.3
 uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
