--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ DB_USER=postgres
 ADMIN_PASS=$2b$12$Ov1GHF6HcZs8aETAjlPJC.XHLqw4DcEtV1ptQT6fjGiORzRxDlga2
 ADMIN_USERNAME=SunnatDevPy
 
+DATABASE_URL=postgresql+asyncpg://postgres:1@localhost:5431/miniapp
+REDIS_URL=redis://localhost:6379/0
