--- a/requirements.txt
+++ b/requirements.txt
@@ -7,28 +7,37 @@ aiosignal==1.3.1
 aiosqlite==0.17.0
 annotated-types==0.7.0
 anyio==4.4.0
+apache-libcloud==3.8.0
 APScheduler==3.10.4
+asttokens==2.4.1
 async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==24.2.0
 babel==2.16.0
 bcrypt==4.2.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+cryptography==43.0.1
 dnspython==2.6.1
+ecdsa==0.19.0
 email_validator==2.2.0
 environs==11.0.0
+executing==2.1.0
 fastapi==0.114.0
 fastapi-admin==1.0.4
 fastapi-cli==0.0.5
 fastapi_cors==0.0.6
+fasteners==0.19
 frozenlist==1.4.1
 greenlet==3.1.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.2
+icecream==2.1.3
 idna==3.8
 iso8601==1.1.0
 itsdangerous==2.2.0
@@ -44,24 +53,33 @@ orjson==3.10.7
 packaging==24.1
 pendulum==3.0.0
 psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.8.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.5.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.9.0
+pyotp==2.9.0
 pypika-tortoise==0.1.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.8.1
+rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+sqladmin==0.19.0
 SQLAlchemy==2.0.34
+sqlalchemy-file==0.6.0
 starlette==0.38.5
+starlette-admin==0.14.1
 time-machine==2.15.0
 tortoise-orm==0.21.6
 typer==0.12.5
@@ -74,4 +92,5 @@ uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.0.1
+WTForms==3.1.2
 yarl==1.11.1
